// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing UserWindow.js renders correctly with a message from me 1`] = `
<div
  className="WindowWrapper"
>
  <h2
    className="WindowTitle"
  >
     
    title
  </h2>
  <div
    className="Window"
  >
    <div
      className="WindowContentWrapper"
    >
      <div
        className="WindowContent"
      >
        <div
          className="WindowYou"
        >
          <span>
            you: 
          </span>
          the message
        </div>
      </div>
    </div>
    <div
      className="WindowCTA"
    >
      <textarea
        onChange={[Function]}
        placeholder="Type a message..."
        value=""
      />
      <button
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing UserWindow.js renders correctly with a message from someone 1`] = `
<div
  className="WindowWrapper"
>
  <h2
    className="WindowTitle"
  >
     
    title
  </h2>
  <div
    className="Window"
  >
    <div
      className="WindowContentWrapper"
    >
      <div
        className="WindowContent"
      >
        <div
          className="WindowThem"
        >
          <span>
            someone
            : 
          </span>
          the message two
        </div>
      </div>
    </div>
    <div
      className="WindowCTA"
    >
      <textarea
        onChange={[Function]}
        placeholder="Type a message..."
        value=""
      />
      <button
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Testing UserWindow.js renders correctly with no message 1`] = `
<div
  className="WindowWrapper"
>
  <h2
    className="WindowTitle"
  >
     
    title
  </h2>
  <div
    className="Window"
  >
    <div
      className="WindowContentWrapper"
    >
      <div
        className="WindowContent"
      />
    </div>
    <div
      className="WindowCTA"
    >
      <textarea
        onChange={[Function]}
        placeholder="Type a message..."
        value=""
      />
      <button
        onClick={[Function]}
      >
        Send
      </button>
    </div>
  </div>
</div>
`;
